Try fix for twitter feed going off-screen on I phone.

--- a/assets/scss/2-modules/_timeline.scss
+++ b/assets/scss/2-modules/_timeline.scss
@@ -7,6 +7,7 @@
 .timeline__wrapper {
   margin-left: auto;
   margin-right: auto;
+  max-width: 100%;
 }
 
 @media screen and (min-width: 768px) {
